tests/paczka1/small_fuzzy/36588017.err
Error in line 9: A856 S260 14,6
Error in line 13: sd0Acs S827 40K8
